# tidis

./: .gitignore  Cargo.toml  Dockerfile  Makefile  NOTICE  README-ZH.md  README.md  config.toml  rust-toolchain
.github/config/: tikv.toml
.github/workflows/: ci.yml
docs/: performance.md  tidis-introduction.md
src/: blocking_client.rs  client.rs  cluster.rs  config.rs  connection.rs  db.rs  frame.rs  gc.rs  kill.rs  lib.rs  parse.rs  rdb.rs  server.rs  shutdown.rs  utils.rs
src/cmd/: auth.rs  cluster.rs  cmdtype.rs  debug.rs  decr.rs  decrby.rs  del.rs  eval.rs  exists.rs  expire.rs  fake.rs  get.rs  getdel.rs  getset.rs  hdel.rs  hexists.rs  hget.rs  hgetall.rs  hincrby.rs  hkeys.rs  hlen.rs  hmget.rs  hset.rs  hstrlen.rs  hvals.rs  incr.rs  incrby.rs  incrdecr.rs  lindex.rs  linsert.rs  llen.rs  lrange.rs  lrem.rs  lset.rs  ltrim.rs  mget.rs  mod.rs  mset.rs  multi.rs  persist.rs  (+34 more)
src/metrics/: http.rs  mod.rs
src/tikv/: client.rs  errors.rs  hash.rs  list.rs  lua.rs  mod.rs  set.rs  string.rs  zset.rs
src/tikv/encoding/: decode.rs  encode.rs  mod.rs
test/: rediswrap.py  test_generic.py  test_hash.py  test_helper.py  test_invalid.py  test_list.py  test_lua.py  test_set.py  test_string.py  test_util.py  test_zset.py
