[package]
authors = ["yongman <yming0221@gmail.com>"]
edition = "2018"
name = "tikv-service"
version = "0.0.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tokio-rs/tikv-service"
description = """
The service layer for TiKV, a distributed key-value store, powered by PingCAP.
"""

[[bin]]
name = "tikv-service-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "1"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.1", features = ["rt"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"
tikv-client = { git = "https://github.com/tikv/client-rust.git", branch = "master" }
lazy_static = "1.4.0"
thiserror = "1"
prometheus = "0.13.0"
hyper = { version = "0.14.17", features = ["full"] }
async-std = { version = "1.11.0", features = ["unstable"] }
toml = { version = "0.5.8" }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false }
mlua = { version = "0.7.4", features = ["luajit", "async", "vendored", "macros", "send" ]}

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
