[package]
authors = ["yongman <yming0221@gmail.com>"]
edition = "2018"
name = "tikv-service"
version = "0.0.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pingcap-inc/tikv-service"
description = """
The service layer for TiKV, a distributed key-value store, powered by PingCAP.
"""

[[bin]]
name = "tikv-service-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "1"
structopt = "0.3.14"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = { version = "2.4" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.1", features = ["rt"] }
tikv-client = { git = "https://github.com/yongman/client-rust.git", branch = "dev" }
lazy_static = "1.4.0"
thiserror = "1"
prometheus = "0.13.0"
pprof = { version = "0.9", features = ["flamegraph", "protobuf-codec"] }
hyper = { version = "0.14.17", features = ["full"] }
async-std = { version = "1.11.0", features = ["unstable"] }
async-tls = { version = "0.11.0", features = ["server"], default-features = false }
rustls = "0.19.0"
rand = "0.8.5"
toml = { version = "0.5.8" }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false }
mlua = { version = "0.7.4", features = ["luajit", "async", "vendored", "macros", "send"]}
sha1 = "0.10.0"
hex = "0.4.3"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
incremental = true
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false
